--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	
 		<section id="Allah(C.C.)" class="demo">
-  		<h1>Allah(C.C.)</h1>
+  		<h1>1)Allah(C.C.)</h1>
 		<h1>Eşi benzeri olmayan, bütün noksan sıfatlardan münezzeh tek ilah, Her biri sonsuz bir hazine olan bütün isimlerini kuşatan özel ismi. İsimlerin sultanı.</h1>
 		
 			<a href="#Er-Rahmân"><span></span><button type="button" style="height:100px;width:150px;background:pink; cursor:pointer">Sonraki</button></a>
