--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <html>
 <body>
 	
-		<h1>1)<span style="color: #ff0000">Taktik</span>
+		<h1><span style="color: #ff0000">Taktik</span>
 	<br>		
-	<br>
-		Amaç bir sonraki Allah(C.C.)'ın ismini tahmin etmeye çalısarak bütün 99 ismi ezberlemek.Her yanlış tahminde başa dönülür.Her gün 5 tane ezberlense kısa sürede biter.İlk olarak sadece isimleri ezberlemek sonra anlamlarıyla beraber ezberlemek işinizi kolaylaştıracaktır. 	
+	<br><span style="color: #ff0000">
+		Amaç bir sonraki Allah(C.C.)'ın ismini tahmin etmeye çalısarak bütün 99 ismi ezberlemek.Her yanlış tahminde başa dönülür.Her gün 5 tane ezberlense kısa sürede biter.İlk olarak sadece isimleri ezberlemek sonra anlamlarıyla beraber ezberlemek işinizi kolaylaştıracaktır.</span> 	
 	</h1>
 	<br>
 		<section id="Allah(C.C.)" class="demo">
